Small fixes in router and swagger documentation
