# backend/specs/swagger.yaml
@@ -744,9 +744,12 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Interests'
+                type: object
+                properties:
+                  interests:
+                    type: array
+                    items:
+                      type: string
         '500':
           description: Internal Server Error
     post:
@@ -763,9 +766,12 @@ paths:
         content:
           application/json:
             schema:
-              type: array
-              items:
-                $ref: '#/components/schemas/Interests'
+              type: object
+              properties:
+                interests:
+                  type: array
+                  items:
+                    type: string
       responses:
         '201':
           description: successful operation
@@ -786,9 +792,12 @@ paths:
         content:
           application/json:
             schema:
-              type: array
-              items:
-                $ref: '#/components/schemas/Interests'
+              type: object
+              properties:
+                interests:
+                  type: array
+                  items:
+                    type: string
       responses:
         '200':
           description: successful operation
